--- a/main.css
+++ b/main.css
@@ -2,10 +2,24 @@ body {
     background-color: black;
     display: flex;
     place-content: center;
+    flex-direction: column;
+    place-items: center;
+    width: 100%;
+    height: 100%;
 }
 
 h1 {
+    color: lightcoral;
+}
+
+p {
     color: white;
-    font-size: 5rem;
+    font-size: 1rem;
+    font-family: 'Space Mono', monospace;
+}
+
+.answer {
+    color: lightgreen;
+    font-size: 1rem;
     font-family: 'Space Mono', monospace;
 }
